lime/scripts/lipo_gru/11653969.stderr
  File "ht_lipo_gru.py", line 444
    print(point, flush=True)
                      ^
SyntaxError: invalid syntax
